Create projects block

--- a/index.html
+++ b/index.html
@@ -80,6 +80,214 @@
       <span class="hamburger__element"></span>
     </button>
   </nav>
+  <section class="projects">
+    <div class="projects__element projects__element--one">
+      <ul class="project__links links">
+        <li class="links__item">
+          <a href="#" class="links__link">All</a>
+        </li>
+        <li class="links__item">
+          <a href="#" class="links__link">House</a>
+        </li>
+        <li class="links__item">
+          <a href="#" class="links__link">Commercial</a>
+        </li>
+        <li class="links__item">
+          <a href="#" class="links__link">Personal</a>
+        </li>
+        <li class="links__item">
+          <a href="#" class="links__link">Studio Lab</a>
+        </li>
+      </ul>
+      <h1 class="projects__title">projects</h1>
+    </div>
+    <div class="projects__element projects__element--two">
+      <div class="projects__info">
+        <h2 class="projects__name">fondue</h2>
+        <p class="projects__description">
+          <b>Lorem ipsum:</b> Lorem ipsum
+        </p>
+        <p class="projects__description">
+          <b>Lorem ipsum:</b> Lorem ipsum
+        </p>
+        <p class="projects__description">
+          <b>Lorem ipsum:</b> Lorem ipsum
+        </p>
+        <p class="projects__description">
+          <b>Lorem ipsum:</b> Lorem ipsum
+        </p>
+        <p class="projects__description">
+          <b>Lorem ipsum:</b> Lorem ipsum
+        </p>
+      </div>
+      <div class="projects__counter">
+        <a class="projects__view" href="#"><span>view projects</span></a>
+        <p class="projects__like like">
+          <button aria-label="like" class="like__btn">
+            <svg>
+              <use xlink:href="/img/symbol/sprite.svg#heart"></use>
+            </svg>
+          </button>
+          <span class="like__counts">+ 200</span>
+        </p>
+      </div>
+    </div>
+    <div class="projects__element projects__element--three">
+      <div class="projects__info">
+        <h2 class="projects__name">potter</h2>
+        <p class="projects__description"><b>for</b>  stelton</p>
+        <p class="projects__description projects__description--lowercase">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis cum nesciunt non, quae recusandae repellat.</p>
+      </div>
+      <div class="projects__counter">
+        <a class="projects__view" href="#"><span>view projects</span></a>
+        <p class="projects__like like">
+          <button aria-label="like" class="like__btn">
+            <svg>
+              <use xlink:href="/img/symbol/sprite.svg#heart"></use>
+            </svg>
+          </button>
+          <span class="like__counts">+ 200</span>
+        </p>
+      </div>
+    </div>
+    <div class="projects__element projects__element--four">
+      <div class="projects__info">
+        <h2 class="projects__name">tabano</h2>
+        <p class="projects__description"><b>lorem:</b> lorem</p>
+        <p class="projects__description"><b>lorem:</b> lorem</p>
+        <p class="projects__description"><b>lorem:</b> lorem</p>
+        <p class="projects__description"><b>lorem:</b> lorem</p>
+      </div>
+      <div class="projects__counter">
+        <a class="projects__view" href="#"><span>view projects</span></a>
+        <p class="projects__like like">
+          <button aria-label="like" class="like__btn">
+            <svg>
+              <use xlink:href="/img/symbol/sprite.svg#heart"></use>
+            </svg>
+          </button>
+          <span class="like__counts">+ 200</span>
+        </p>
+      </div>
+    </div>
+    <div class="projects__element projects__element--five">
+      <div class="projects__info">
+        <h2 class="projects__name">lpuis xx</h2>
+        <p class="projects__description"><b>lorem:</b> lorem</p>
+        <p class="projects__description"><b>lorem:</b> lorem</p>
+        <p class="projects__description"><b>lorem:</b> lorem</p>
+        <p class="projects__description"><b>lorem:</b> lorem</p>
+      </div>
+      <div class="projects__counter">
+        <a class="projects__view" href="#"><span>view projects</span></a>
+        <p class="projects__like like">
+          <button aria-label="like" class="like__btn">
+            <svg>
+              <use xlink:href="/img/symbol/sprite.svg#heart"></use>
+            </svg>
+          </button>
+          <span class="like__counts">+ 200</span>
+        </p>
+      </div>
+    </div>
+    <div class="projects__element projects__element--six">
+      <div class="projects__info">
+        <h2 class="projects__name">399-554-ad</h2>
+        <p class="projects__description"><b>lorem:</b> lorem</p>
+        <p class="projects__description"><b>lorem:</b> lorem</p>
+        <p class="projects__description"><b>lorem:</b> lorem</p>
+        <p class="projects__description"><b>lorem:</b> lorem</p>
+      </div>
+      <div class="projects__counter">
+        <a class="projects__view" href="#"><span>view projects</span></a>
+        <p class="projects__like like">
+          <button aria-label="like" class="like__btn">
+            <svg>
+              <use xlink:href="/img/symbol/sprite.svg#heart"></use>
+            </svg>
+          </button>
+          <span class="like__counts">+ 200</span>
+        </p>
+      </div>
+    </div>
+    <div class="projects__element projects__element--seven">
+      <div class="projects__info">
+        <h2 class="projects__name">fiji</h2>
+        <p class="projects__description"><b>lorem:</b> lorem</p>
+        <p class="projects__description"><b>lorem:</b> lorem</p>
+        <p class="projects__description"><b>lorem:</b> lorem</p>
+      </div>
+      <div class="projects__counter">
+        <a class="projects__view" href="#"><span>view projects</span></a>
+        <p class="projects__like like">
+          <button aria-label="like" class="like__btn">
+            <svg>
+              <use xlink:href="/img/symbol/sprite.svg#heart"></use>
+            </svg>
+          </button>
+          <span class="like__counts">+ 200</span>
+        </p>
+      </div>
+    </div>
+    <div class="projects__element projects__element--eight">
+      <div class="projects__info">
+        <h2 class="projects__name">sesann</h2>
+        <p class="projects__description"><b>lorem:</b> lorem</p>
+        <p class="projects__description"><b>lorem:</b> lorem</p>
+        <p class="projects__description"><b>lorem:</b> lorem</p>
+      </div>
+      <div class="projects__counter">
+        <a class="projects__view" href="#"><span>view projects</span></a>
+        <p class="projects__like like">
+          <button aria-label="like" class="like__btn">
+            <svg>
+              <use xlink:href="/img/symbol/sprite.svg#heart"></use>
+            </svg>
+          </button>
+          <span class="like__counts">+ 200</span>
+        </p>
+      </div>
+    </div>
+    <div class="projects__element projects__element--nine">
+      <div class="projects__info">
+        <h2 class="projects__name">Alessi</h2>
+        <p class="projects__description"><b>lorem:</b> lorem</p>
+        <p class="projects__description"><b>lorem:</b> lorem</p>
+        <p class="projects__description"><b>lorem:</b> lorem</p>
+      </div>
+      <div class="projects__counter">
+        <a class="projects__view" href="#"><span>view projects</span></a>
+        <p class="projects__like like">
+          <button aria-label="like" class="like__btn">
+            <svg>
+              <use xlink:href="/img/symbol/sprite.svg#heart"></use>
+            </svg>
+          </button>
+          <span class="like__counts">+ 200</span>
+        </p>
+      </div>
+    </div>
+    <div class="projects__element projects__element--ten">
+      <p class="projects__subtitle">timeline</p>
+      <ul class="projects__links links">
+        <li class="links__item">
+          <a href="#" class="links__link">2014</a>
+        </li>
+        <li class="links__item">
+          <a href="#" class="links__link">2013</a>
+        </li>
+        <li class="links__item">
+          <a href="#" class="links__link">2012</a>
+        </li>
+        <li class="links__item">
+          <a href="#" class="links__link">2011</a>
+        </li>
+        <li class="links__item">
+          <a href="#" class="links__link">Studio Lab</a>
+        </li>
+      </ul>
+    </div>
+  </section>
 </div>
 </body>
 </html>
